--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -112,6 +112,9 @@
   <ItemGroup>
     <ClInclude Include="universidad.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="universidad.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
