--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="control.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="escuela.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="universidad.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="control.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="escuela.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
