Empece la a migrar cosas hacia una clase interfaz, cambie el cout string por uno directo

--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -118,6 +118,7 @@
   <ItemGroup>
     <ClCompile Include="control.cpp" />
     <ClCompile Include="escuela.cpp" />
+    <ClCompile Include="interfaz.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="universidad.cpp" />
   </ItemGroup>
