--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -114,6 +114,7 @@
     <ClInclude Include="control.h" />
     <ClInclude Include="escuela.h" />
     <ClInclude Include="interfaz.h" />
+    <ClInclude Include="nodoEscuelas.h" />
     <ClInclude Include="universidad.h" />
   </ItemGroup>
   <ItemGroup>
@@ -122,6 +123,7 @@
     <ClCompile Include="escuela.cpp" />
     <ClCompile Include="interfaz.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="nodoEscuelas.cpp" />
     <ClCompile Include="universidad.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
