--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="contenedorEscuelas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nodoEscuelas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="universidad.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="contenedorEscuelas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="nodoEscuelas.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
