Cambie un monton de cosas pero que aburrido senalarlas

--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="interfaz.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="contenedorEscuelas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="universidad.cpp">
