--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -110,6 +110,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="contenedorEscuelas.h" />
     <ClInclude Include="control.h" />
     <ClInclude Include="escuela.h" />
     <ClInclude Include="interfaz.h" />
