--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="nodoEscuelas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="curso.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="universidad.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="nodoEscuelas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="curso.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
