--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -110,11 +110,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="contenedorCursos.h" />
     <ClInclude Include="contenedorEscuelas.h" />
     <ClInclude Include="control.h" />
     <ClInclude Include="curso.h" />
     <ClInclude Include="escuela.h" />
     <ClInclude Include="interfaz.h" />
+    <ClInclude Include="nodoCursos.h" />
     <ClInclude Include="nodoEscuelas.h" />
     <ClInclude Include="universidad.h" />
   </ItemGroup>
@@ -125,6 +127,7 @@
     <ClCompile Include="escuela.cpp" />
     <ClCompile Include="interfaz.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="nodoCursos.cpp" />
     <ClCompile Include="nodoEscuelas.cpp" />
     <ClCompile Include="universidad.cpp" />
   </ItemGroup>
