--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="nodoCursos.h" />
     <ClInclude Include="nodoEscuelas.h" />
     <ClInclude Include="persona.h" />
+    <ClInclude Include="profesor.h" />
     <ClInclude Include="universidad.h" />
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +133,7 @@
     <ClCompile Include="nodoCursos.cpp" />
     <ClCompile Include="nodoEscuelas.cpp" />
     <ClCompile Include="persona.cpp" />
+    <ClCompile Include="profesor.cpp" />
     <ClCompile Include="universidad.cpp" />
   </ItemGroup>
   <ItemGroup>
