Agrego metodos para contenedorProfesores

--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClCompile Include="contenedorCursos.cpp" />
     <ClCompile Include="contenedorEscuelas.cpp" />
+    <ClCompile Include="contenedorProfesores.cpp" />
     <ClCompile Include="control.cpp" />
     <ClCompile Include="curso.cpp" />
     <ClCompile Include="escuela.cpp" />
