--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="nodoProfesores.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="aranceles.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="universidad.cpp">
@@ -102,6 +105,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="contenedorProfesores.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="aranceles.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
