--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="aranceles.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="contenedorEstudiantes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="nodoEstudiantes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="universidad.cpp">
@@ -108,6 +114,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="aranceles.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="contenedorEstudiantes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="nodoEstudiantes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
