--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="interfazEstudiantes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="interfazMatricula.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="universidad.cpp">
@@ -192,6 +195,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="interfazEstudiantes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="interfazMatricula.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
