--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -131,6 +131,8 @@
     <ClInclude Include="interfazPrincipal.h" />
     <ClInclude Include="interfazProfesores.h" />
     <ClInclude Include="interfazUniversidad.h" />
+    <ClInclude Include="lista.h" />
+    <ClInclude Include="nodo.h" />
     <ClInclude Include="nodoCursos.h" />
     <ClInclude Include="nodoEscuelas.h" />
     <ClInclude Include="nodoProfesores.h" />
